Bug 153006 - Report Builder: Format for inserting Date and Time changed to "week of the year" and "timestamp" (Linux)
Summary: Report Builder: Format for inserting Date and Time changed to "week of the ye...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Database-Reports-Builder
  Show dependency treegraph
 
Reported: 2023-01-13 14:50 UTC by Robert Großkopf
Modified: 2023-01-24 10:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Have a look at the screenshot - default for date and time useless since LO 7.3 (96.07 KB, image/png)
2023-01-13 14:50 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-01-13 14:50:15 UTC
Created attachment 184633 [details]
Have a look at the screenshot - default for date and time useless since LO 7.3

Open a report in a database for editing.
Go to Insert → Date and Time
Format for a date will be shown as a number (week if the year)
Format for a time will be shown as a timestamp (timestamp with milliseconds, totally useless in a report, which needs more than some seconds to be executed by default).

Up to LO 7.2.5.2 default for a date will be the normal date of your country. 
Up to LO 7.2.5.2 default for a time is HH:MM

Have had a look at the dialog for format numbers. But order of the entries didn't change. So in LO 7.2.5.2 first entry of this dialog has been chosen, while since LO 7.3.0.3 the entry has nothing to do with the position in this dialog.

All tested with OpenSUSE 15.3 64bit rpm Linux.
Comment 1 Stéphane Guillou (stragu) 2023-01-13 15:39:28 UTC
Reproduced on Ubuntu 20.04:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 197e5f81213d14fdcbff40edf73385ecd4cd9815
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

and:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-IE (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-IE (en_AU.UTF-8); UI: en-US
Calc: threaded

These defaults are not good defaults, the previous ones were more suitable in my opinion.

Not reproduced at all on Windows 10:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 2 Julien Nabet 2023-01-15 11:13:39 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

code pointer reportdesign/source/ui/dlg/DateTime.cxx

Now I don't know at how to investigate about this one + it's quite weird it happens on Linux and not on Windows.
Comment 3 Julien Nabet 2023-01-16 08:00:13 UTC
Eike: thought you might be interested in this one.
Comment 4 Stéphane Guillou (stragu) 2023-01-16 10:01:01 UTC
Bisected on linux-64-7.3 repo to commit 1d81dc5452edc6345c5d79137013795bd0ff05b0 which point to the following core commit:

commit 17d2247a66b6a9e3105b0a8b8e6d6b5bea5e3ed4
author	Noel Grandin <noelgrandin@gmail.com>	Fri Aug 13 19:03:23 2021 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sat Aug 14 08:35:46 2021 +0200
tree 6117498afdf8b7476e1756651067f44af515eebf
parent da76d817400242934fdaebcdb226abf3d6595f56

formatter maps can use unordered_map

Change-Id: I733537e98cccc1a5dcb2c275b3baeb56af5f15c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120468

Noel, can you please have a look?
Comment 5 Commit Notification 2023-01-17 21:07:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db28a0cc2e11e1319509e13172fadf4b54d50ecf

tdf#153006 ordering of date/time formats in report builder

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-01-18 10:28:32 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/6e7ef6d84d3cb61aaa68099598062c5f1af18260

tdf#153006 ordering of date/time formats in report builder

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-01-18 15:46:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5c2a4be7de9b49b43dd7d4bd0d83d33922c425ae

tdf#153006 ordering of date/time formats in report builder

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stéphane Guillou (stragu) 2023-01-20 17:43:15 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 579d144290c1617fdb38d09b30900a6bbe390b8d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Robert, Noel and everyone!
Comment 9 Xisco Faulí 2023-01-24 10:36:26 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard