tdf#153006 ordering of date/time formats in report builder

regression from
    commit 17d2247a66b6a9e3105b0a8b8e6d6b5bea5e3ed4
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Aug 13 19:03:23 2021 +0200
    formatter maps can use unordered_map

Change-Id: Ibc4bc71776a48c61fb9b651672404f9507c1f082
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145566
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit db28a0cc2e11e1319509e13172fadf4b54d50ecf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145715
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>